[gd_scene load_steps=2 format=3 uid="uid://ccharselect001"]

[ext_resource type="Script" uid="uid://ccharselectsc1" path="res://scripts/ui/character_select.gd" id="1_select"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_select")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.18, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "SELECT CHARACTER"
horizontal_alignment = 1

[node name="CharacterGrid" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Character1" type="Panel" parent="CharacterGrid"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CharacterGrid/Character1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Portrait" type="TextureRect" parent="CharacterGrid/Character1/VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
stretch_mode = 5

[node name="Name" type="Label" parent="CharacterGrid/Character1/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MEGAMAN"
horizontal_alignment = 1

[node name="SelectBtn" type="Button" parent="CharacterGrid/Character1/VBox"]
layout_mode = 2
text = "SELECT"

[node name="Character2" type="Panel" parent="CharacterGrid"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CharacterGrid/Character2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Portrait" type="TextureRect" parent="CharacterGrid/Character2/VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
stretch_mode = 5

[node name="Name" type="Label" parent="CharacterGrid/Character2/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RYU"
horizontal_alignment = 1

[node name="SelectBtn" type="Button" parent="CharacterGrid/Character2/VBox"]
layout_mode = 2
text = "SELECT"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -80.0
offset_right = 75.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "BACK"
